<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_res"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/light_light_pink">

        <TextView
            android:id="@+id/your_result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:text="@string/your_result"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingRight="7dp"
            android:paddingLeft="7dp"
            android:textColor="@color/cobalt"/>

        <ImageView
            android:id="@+id/img_res"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/your_result_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message"
            android:textSize="35dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/img_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"/>


        <Button
            android:id="@+id/negative_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/msg_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/positive_btn"
            android:text="@string/repeat"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_cancel"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/positive_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/msg_txt"
            app:layout_constraintStart_toEndOf="@+id/negative_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/finish"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_yes"
            android:layout_margin="5dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>