<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/light_light_pink">

        <TextView
            android:id="@+id/choose_multiplier_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:text="@string/choose_multiplier"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:paddingRight="7dp"
            android:paddingLeft="7dp"
            android:textColor="@color/cobalt"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/choose_multiplier_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rg2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rg1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cl2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accept_btn"
            android:text="@string/cancel"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_cancel"
            />

        <Button
            android:id="@+id/accept_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cl2"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/yes"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/btn_yes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>